Switching to vanilla JS

--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,9 @@
     <script src="popup.js"></script>
   </head>
   <body>
+  	<form action="">
+			<h2>Activate</h2><input type="checkbox" name="Activate" value="Activate">
+		</form>
   </body>
 </html>
 
